Fix breadcrumb replace prop logic; Remove words from dashboard bottom menu on xs screen in order to keep it from wrapping; Fix OpenSciEd kit prices; Change class to className in upcoming programs template

--- a/src/components/layout/dashboard-menus/dashboard-menus.scss
+++ b/src/components/layout/dashboard-menus/dashboard-menus.scss
@@ -84,6 +84,11 @@ td[data-state="title-column-collapsed"] {
   border-top-right-radius: 0 !important;
 }
 
+// @media (max-width: )
+.bm-span {
+  color: $white;
+}
+
 @media (max-width: 576px) {
   .flex-basis {
     > div {
